# anchor-dao

./: Anchor.toml  package-lock.json  package.json
circuits/: voting.light
circuits/vote/: vote.circom  vote.light  voteMain.circom
programs/anchor-zk-dao/: Cargo.toml
programs/anchor-zk-dao/src/: account_structs.rs  account_validators.rs  lib.rs  state.rs
programs/anchor-zk-dao/tests/: voting.rs
programs/vote/: Cargo.toml
programs/vote/src/: auto_generated_accounts.rs  lib.rs  processor.rs  verifying_key_vote.rs
tests/: anchor-zk-dao.ts
